--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,15 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-		<%= link_to "Home", root_path %>
-		<%= link_to "Lessons", lessons_path %>
-		<%= link_to "Gallery", gallery_path %>
-		<%= link_to "Events", events_path %>
-		<%= link_to "Blog", blog_path %>
-		<%= link_to "Contacts", contacts_path %>
-		<%= yield %>
+        
+				<%= render 'layouts/header' %>
+				<div class="container">
+		          <%= yield %>
+		    </div>
+		
 
 </body>
 </html>
