Add new styles, image bg, change stylesheets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
 		          <%= yield %>
 		    </div>
 		
+		     <footer>
+		        <div class="container">
+		            <div class="row">
+		                <div class="col-lg-12 text-center">
+		                    <p>Copyright &copy; 2014</p>
+		                </div>
+		            </div>
+		        </div>
+         </footer>
 
 </body>
 </html>
