--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-default" role="navigation">
+<div class="brand">Студия живописи и рисунка Жанны Завидовой</div>
+<div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19</div>
+
+<nav class="navbar navbar-static-top navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -7,16 +10,13 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <h1>
-            <a href="#" style="padding: 40px 20px 20px 20px; text-decoration: none">
-            Студия живописи и рисунка Жанны Завидовой</a>
-    </h1>
+    
     
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-center">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Lessons", lessons_path %></li>
       <li><%= link_to "Gallery", gallery_path %></li>
