remove bootstrap.min.css,business-casual.css

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-center">
+    <ul class="nav navbar-nav navbar-default">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Lessons", lessons_path %></li>
       <li><%= link_to "Gallery", gallery_path %></li>
