--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,12 @@
 <body>
         
 				<%= render 'layouts/header' %>
+
 				<div class="container">
 		          <%= yield %>
 		    </div>
-		
-		     <footer>
-		        <div class="container">
-		            <div class="row">
-		                <div class="col-lg-12 text-center">
-		                    <p>Copyright &copy; 2014</p>
-		                </div>
-		            </div>
-		        </div>
-         </footer>
+
+		    <%= render 'layouts/footer' %>
 
 </body>
 </html>
