--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,3 @@
-<div class="brand">Студия живописи и рисунка Жанны Завидовой</div>
-<div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19</div>
-
 <nav class="navbar navbar-static-top navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -10,19 +7,17 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    
-    
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-default">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Lessons", lessons_path %></li>
-      <li><%= link_to "Gallery", gallery_path %></li>
-      <li><%= link_to "Events", events_path %></li>  
-      <li><%= link_to "Blog", blog_path %></li>  
-      <li><%= link_to "Contacts", contacts_path %></li>    
+    <ul class="nav navbar-nav navbar center">
+        <li><%= link_to "О студии", root_path %></li>
+        <li><%= link_to "Уроки", lessons_path %></li>
+        <li><%= link_to "Галерея", gallery_path %></li>
+        <li><%= link_to "События", events_path %></li>  
+        <li><%= link_to "Блог", blog_path %></li>  
+        <li><%= link_to "Контакты", contacts_path %></li>    
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
