--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -2,7 +2,26 @@
 
 
 
-$body-bg:                                   #9b59b6;
+body {
+font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+background: url('../img/bg.jpg') no-repeat center center fixed;
+background-image: url(http://startbootstrap.com/templates/business-casual/img/bg.jpg);
+background-position-x: 50%;
+background-position-y: 50%;
+background-size: cover;
+background-repeat-x: no-repeat;
+background-repeat-y: no-repeat;
+background-attachment: fixed;
+background-origin: initial;
+background-clip: initial;
+background-color: initial;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+background-size: cover;
+-o-background-size: cover;
+}
+
+
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-height:                                        60px;
 $navbar-default-bg:                          #ecf0f1;
