--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-    <div class="row">
+    
         <div class="col-lg-12 text-center">
-            <p>Copyright &copy; 2014</p>
+            <p>Copyright &copy; 2014-2015</p>
         </div>
-    </div>
+    
 </div>
          
