--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
     		          <%= yield %>
     		    </div>
 
+            <div class="panel-heading center">
+                 <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b- ig-b-48"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-l.png" alt="Facebook"></a>
+                 <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48"><img src="http://www.iconsdb.com/icons/preview/white/instagram-l.png" alt="Instagram"></a>
+                 <a href="#" class="ig-b- ig-b-48"><img src="http://static.iconsplace.com/icons/preview/white/vk.com-48.png" alt="Vkontakte"></a>
+                 <a href="#" class="ig-b- ig-b-48"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-l.png" alt="Youtube"></a>
+            </div>
+
     		    <%= render 'layouts/footer' %>
         
 </body>
