--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -23,11 +23,11 @@ background-size: cover;
 
 
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-height:                                        60px;
-$navbar-default-bg:                          #ecf0f1;
+$navbar-height:                                        70px;
+$navbar-default-bg:                          rgba(255,255,255,0.9);
 $navbar-default-brand-color:      #c0392b;
 $brand-primary:                                    #3498db;
-$jumbotron-bg:                                         #ecf0f1;
+$jumbotron-bg:                                         rgba(255,255,255,0.9);
 
 @import 'bootstrap';
 
