--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -85,8 +85,23 @@ text-align: center;
   margin-left: 15px;
 }
 
+@media (min-width: 992px){
+  .col-md-4 {
+  width: 33.33333333%;
+  }
+}
 
+@media (min-width: 992px){
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  float: left;
+  }
+}
 
-
+.col-md-4{
+text-align: left;
+min-height: 1px;
+padding-right: 15px;
+padding-left: 15px;
+}
 
 
