--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -7,26 +7,26 @@
                     <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.ru/maps?f=q&amp;source=s_q&amp;hl=ru&amp;geocode=&amp;q=+%D1%83%D0%BB.+%D0%9F%D0%BE%D0%BA%D1%80%D0%BE%D0%B2%D0%BA%D0%B0,+%D0%B4.27&amp;sll=55.741008,37.617968&amp;sspn=0.013505,0.042272&amp;ie=UTF8&amp;hq=&amp;hnear=%D1%83%D0%BB.+%D0%9F%D0%BE%D0%BA%D1%80%D0%BE%D0%B2%D0%BA%D0%B0,+27,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0&amp;t=m&amp;ll=55.760012,37.648172&amp;spn=0.016903,0.036478&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
                 </div>
                 <div class="col-md-4">
-                    <p>Телефон:
-                        <strong>+7 916 657 57 19</strong>
+                    <p>Телефон: +7 916 657 57 19
                     </p>
-                    <p>Email:
-                        <strong><a href="mailto:artjz.studia@gmail.com">artjz.studia@gmail.com</a></strong>
+                    <p>Email: <a href="mailto:artjz.studia@gmail.com">artjz.studia@gmail.com</a>
                     </p>
-                    <p>Адрес:
-                        <strong>ул. Покровка д.27, Москва</strong>
+                    <p>Адрес: ул. Покровка д.27, г.Москва
                     </p>
                 </div>
+                <div class="col-md-12">
+	                    <p><strong>Как нас найти:</strong></br>
+	                        Вы идете по Покровке, после кафе Cafe Lavazza с красной вывеской будет вход в арку , далее направо под вывеской «Умные книги» дверь в культурный центр «Покровские ворота», сказать охране: в центр «Самадева» и подняться на 2-й этаж, в кабинет 19.   
+	                    </p></br>
+	                    <p><strong>Как пройти от метро:</strong></br>
+	                        М. Тургеневская, Чистые пруды, Сретенский бульвар – пройти по Чистопрудному бульвару до пересечения с ул. Покровка, повернуть налево и пройти по Покровке до дома 27, налево в арку. Около 10 мин. пешком.</br>
 
+	                        М. Китай-город, выход к Политехническому музею, идти по ул. Маросейка, далее она переходит в ул. Покровку, до д.27. около 15-17 мин (можно проехать на троллейбусе или маршрутке).   
+	                    </p>
+	              </div>       
                 <div class="clearfix"></div>
-                 <p><strong>Как нас найти:</strong></br>
-                        Вы идете по Покровке, после кафе Cafe Lavazza с красной вывеской будет вход в арку , далее направо под вывеской «Умные книги» дверь в культурный центр «Покровские ворота», сказать охране: в центр «Самадева» и подняться на 2-й этаж, в кабинет 19.   
-                    </p>
-                    <p><strong>Как пройти от метро:</strong></br>
-                        М. Тургеневская, Чистые пруды, Сретенский бульвар – пройти по Чистопрудному бульвару до пересечения с ул. Покровка, повернуть налево и пройти по Покровке до дома 27, налево в арку. Около 10 мин. пешком.
 
-                        М. Китай-город, выход к Политехническому музею, идти по ул. Маросейка, далее она переходит в ул. Покровку, до д.27. около 15-17 мин (можно проехать на троллейбусе или маршрутке).   
-                    </p>
+                
             </div>   
 		</div>
 </div>		
