navbar-nav big letters

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -79,6 +79,12 @@ text-align: center;
     }
 }
 
+.navbar-nav {
+text-transform: uppercase;
+font-weight: 400;
+letter-spacing: 3px;
+}
+
 .row {
 	color: white;
   margin-right: 15px;
