Add image upload with Paperclip

--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -9,7 +9,7 @@
                 <div class="col-md-4">
                     <p>Телефон: +7 916 657 57 19</p>
                     <p>Email: <a href="mailto:artjz.studia@gmail.com">artjz.studia@gmail.com</a></p>
-                    <p>Адрес: ул. Покровка д.27, г. Москва</p>
+                    <p>Адрес: ул. Покровка д.27,</br> г. Москва</p>
                 </div>
                 <div class="col-md-12">
 	                    <p><strong>Как нас найти:</strong></br>
