--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -114,3 +114,45 @@ letter-spacing: 3px;
   text-align: left;
 }
 
+h1, h2, h3 {
+margin-top: 20px;
+margin-bottom: 20px;
+}
+
+hr {
+max-width: 400px;
+border-color: #999999;
+}
+
+hr {
+margin-top: 20px;
+margin-bottom: 20px;
+border: 0;
+border-top: 1px solid #eee;
+}
+
+hr {
+height: 0;
+box-sizing: content-box;
+}
+
+hr {
+display: block;
+-webkit-margin-before: 0.5em;
+-webkit-margin-after: 0.5em;
+-webkit-margin-start: auto;
+-webkit-margin-end: auto;
+border-style: inset;
+border-width: 1px;
+}
+
+
+.featurette-image.pull-left {
+margin-right: 40px;
+}
+
+.pull-left {
+float: left!important;
+}
+
+
