--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,13 @@
                         </div>
                     </div></br>
                     
-                    <h2>Какие-то вводные слова о студии?</h2></br>
+                    <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">О студии</br></h2>
+                        <hr>
+                    </div></br>
+                    
+                    <h3>Какие-то вводные слова о студии?</h3></br>
 
                     <div class="col-lg-12">
                         <hr>
@@ -44,11 +50,11 @@
                     </div></br>
 
                     <div class="featurette" id="services">
-                        <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna.jpg') %>/></br>
+                        <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna.jpg') %>/>
                         <h3 class="featurette-heading text-left">Завидова Жанна Борисовна</br>
                         </h3>
                         <p class="lead text-left">
-                            Закончила МГАХИ им Сурикова (1989-1995 гг.),</br>
+                            Закончила МГАХИ им Сурикова (1989-1995 гг.)</br>
                             Отделение станковой графики</br>
                             С 1995 по 1997 г. - стипендиат Академии Художеств РФ</br>
                             С 1995 г. - участник различных выставок в России и за рубежом</br>
