--- a/app/views/pages/lessons.html.erb
+++ b/app/views/pages/lessons.html.erb
@@ -1,11 +1,42 @@
-<div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
-	
-	<p>
-		The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize. A huge thanks to Death to the Stock Photo for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.
+<div class="container"> 
+		<div class="jumbotron center">
+		    <div class="box">
+		            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Наши занятия</br></h2>
+                        <hr>
+                </div></br>
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-  </p>
- 
- 
-</div>
+		            <div class="col-lg-4 col-sm-6 text-center">
+		                <img class="img-circle img-responsive img-center pull-center" src="http://placehold.it/200x200" alt="">
+		                <h3>Живопись</h3>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		            </div>
+		            <div class="col-lg-4 col-sm-6 text-center">
+		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+		                <h3>Рисунок</h3>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		            </div>
+		            <div class="col-lg-4 col-sm-6 text-center">
+		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+		                <h3>Декор</h3>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		            </div>
+
+		            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Расписание занятий</br></h2>
+                        <hr>
+                </div></br>
+                <p><span style="font-weight:bold">Четверг: 19.00 - 21.30</span></br>
+                   На первое занятие материалы приносить не нужно, в студии есть все необходимое для рисунка и живописи.
+                </p>
+		            <div class="clearfix"></div>
+		      </div>
+		 
+		 
+		</div>
+</div>		
