--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
                     </div></br>
 
                     <div class="featurette" id="services">
-                        <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna.jpg') %>/>
+                        <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna-1.jpg') %>/>
                         <h3 class="featurette-heading text-left">Завидова Жанна Борисовна</br>
                         </h3>
                         <p class="lead text-left">
