--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,11 +1,49 @@
-<div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
-	
-	<p>
-		The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize. A huge thanks to Death to the Stock Photo for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.
+<div class="container"> 
+		<div class="jumbotron center">
+		    <div class="box">
+		            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Предлагаем вашему вниманию</br></h2>
+                        <hr>
+                </div></br>
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-  </p>
- 
- 
-</div>
+		            <div class="col-lg-4 col-sm-6 text-center">
+		                <img class="img-circle img-responsive img-center pull-center" src="http://placehold.it/200x200" alt="">
+		                <h3>Мастер-класс для частных целей</h3>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		            </div>
+		            <div class="col-lg-4 col-sm-6 text-center">
+		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+		                <h3>Мастер-класс для корпоративных целей</h3>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		            </div>
+		            <div class="col-lg-4 col-sm-6 text-center">
+		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+		                <h3>Пленэр</h3>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		            </div>
+                
+                <div class="col-lg-12">
+	                <p>
+	                   Стоимость услуг уточняйте по телефону <%= link_to "контакты", contacts_path %>
+	                </p> 
+                </div></br>
+
+		            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Выставки</br></h2>
+                        <hr>
+                </div></br>
+
+                <iframe width="560" height="315" src="//www.youtube.com/embed/nbQ086okQaI" frameborder="0" allowfullscreen></iframe>
+
+
+		            <div class="clearfix"></div>
+		      </div>
+		 
+		 
+		</div>
+</div>		
