--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -28,7 +28,7 @@
                 
                 <div class="col-lg-12">
 	                <p>
-	                   Стоимость услуг уточняйте по телефону <%= link_to "контакты", contacts_path %>
+	                   Стоимость услуг уточняйте по <%= link_to "телефону", contacts_path %>
 	                </p> 
                 </div></br>
 
