--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -4,8 +4,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
-                        <strong>blog</strong>
+                    <h2 class="intro-text text-center">Наш
+                        <strong>блог</strong>
                     </h2>
                     <hr>
                 </div>
