add social icons vk, youtube

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
 		</div>
 
         <div class="panel-heading center">
-             <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b- ig-b-48"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-l.png" alt="Facebook"></a>
-             <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48"><img src="http://www.iconsdb.com/icons/preview/white/instagram-l.png" alt="Instagram"></a>
+             <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-l.png" alt="Facebook"></a>
+             <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk.png')%> alt="Vkontakte" /></a>
+             <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/instagram-l.png" alt="Instagram"></a>
+             <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-l.png" alt="Youtube"></a>
         </div>
 
         <%= render 'layouts/footer' %>
