add small social icons to brand

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,19 @@
 <body>
         <div class="container">
             <div class="brand">Студия живописи и рисунка Жанны Завидовой</div>
-            <div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19</div>
-    	</div>
+            <div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19 |
+              <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-m.png" alt="Facebook"></a> 
+              <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk-s.png')%> alt="Vkontakte" /></a>
+              <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/instagram-m.png" alt="Instagram"></a>
+              <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-m.png" alt="Youtube"></a>
+            </div>
+            
+    	  </div>
         		
-		<%= render 'layouts/header' %>
+		    <%= render 'layouts/header' %>
         <div class="container">
 		          <%= yield %>
-		</div>
+		    </div>
 
         <div class="panel-heading center">
              <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-l.png" alt="Facebook"></a>
