--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -30,7 +30,7 @@ $brand-primary:                                    #3498db;
 $jumbotron-bg:                                         rgba(255,255,255,0.9);
 
 @import 'bootstrap';
-
+@import "slick";
 .center {
      text-align: center;
 }
