--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -38,7 +38,7 @@
                         <hr>
                 </div></br>
 
-                <iframe width="560" height="315" src="//www.youtube.com/embed/nbQ086okQaI" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.youtube.com/embed/nbQ086okQaI" frameborder="0" allowfullscreen></iframe>
 
 
 		            <div class="clearfix"></div>
