--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
                                 <div class="item">
                                     <img class="img-responsive img-full" src=<%= asset_path('slide-3.jpg') %>/>
                                 </div>
-                            </div>
+                            </div><!-- #carousel-inner --> 
 
                             <!-- Controls -->
                             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -32,14 +32,14 @@
                             <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                                 <span class="icon-next"></span>
                             </a>
-                        </div>
-                    </div></br>
+                        </div><!-- #carousel-example-generic --> 
+                    </div></br><!-- #col-lg-12 --> 
                     
                     <div class="col-lg-12">
                         <hr>
                         <h2 class="intro-text text-center">О студии</br></h2>
                         <hr>
-                    </div></br>
+                    </div></br><!-- #col-lg-12 --> 
                     
                     <h3>Какие-то вводные слова о студии?</h3></br>
 
@@ -47,7 +47,7 @@
                         <hr>
                         <h2 class="intro-text text-center">О преподавателе</br></h2>
                         <hr>
-                    </div></br>
+                    </div></br><!-- #col-lg-12 --> 
 
                     <div class="featurette" id="services">
                         <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna-1.jpg') %>/>
@@ -61,13 +61,13 @@
                             Работы находятся в частных собраниях России, Швейцарии, США</br>
                             В 2008 г. создала авторскую студию живописи и рисунка.</br>
                         </p>
-                    </div>
+                    </div><!-- #featurette --> 
 
                     <div class="clearfix"></div>
-            </div>
+            </div><!-- #box --> 
            
-      </div>
-</div>
+      </div><!-- #jumbotron center --> 
+</div><!-- #container --> 
 
 
                         
