--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -11,6 +11,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src=<%= asset_path('blog-1.jpg') %>/>
+                    
                     <h2>Post Title
                         <br>
                         <small>October 13, 2013</small>
@@ -21,7 +22,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src=<%= asset_path('blog-2.jpg') %>/>
-                    
+                    <div class="fb-share-button" data-href="http://art-jz.herokuapp.com/" data-width="15"></div>
                     <h2>Post Title
                         <br>
                         <small>October 13, 2013</small>
@@ -40,6 +41,9 @@
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
+
+                <div class="fb-post" data-href="https://www.facebook.com/FacebookDevelopers/posts/10151471074398553" data-width="1000"></div>
+
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
                         <li class="previous"><a href="#">← Older</a>
