add text to home & lessons

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
-
+.clear {
+  clear: both;
+}
 
 body {
 font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -30,7 +32,7 @@ $brand-primary:                                    #3498db;
 $jumbotron-bg:                                         rgba(255,255,255,0.9);
 
 @import 'bootstrap';
-@import 'slick';
+
 .center {
      text-align: center;
 }
