--- a/app/views/pages/lessons.html.erb
+++ b/app/views/pages/lessons.html.erb
@@ -10,26 +10,23 @@
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center pull-center" src="http://placehold.it/200x200" alt="">
 		                <h3>Живопись</h3>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>В нашей студии мы пишем маслом и акварелью, акрилом и темперой, так же рисуем пастелью, которую все любят за цвет, но, тем не менее, этот материал относится к средствам графики. Ученики пробуют себя в цвете, осваивая все эти прекрасные материалы и техники.</p>
 		            </div>
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
 		                <h3>Рисунок</h3>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>Натюрморты, гипсы, рисование с натуры – классический академический рисунок карандашом, где шаг за шагом изучаем основы рисования, форму, объем, правила перспективы – все для грамотного построение предметов в пространстве. Рисунок углем, сангиной, соусом – мы осваиваем эти графические техники, которые дают возможности быстрого, «живописного» рисования.</p>
 		            </div>
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
 		                <h3>Декор</h3>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p>А для тех, кто очень хочет творческого самовыражения, но пока не решается взять в руки кисть, есть прекрасная возможность для творчества – декупаж, витражная роспись, и множество других техник декоративно-прикладного искусства.</p>
 		            </div>
-
+                <div class="clear"></div>
 		            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">Расписание занятий</br></h2>
-                        <hr>
+                    <hr>
+                    <h2 class="intro-text text-center">Расписание занятий</br></h2>
+                    <hr>
                 </div></br>
                 <p><span style="font-weight:bold">Четверг: 19.00 - 21.30</span></br>
                    На первое занятие материалы приносить не нужно, в студии есть все необходимое для рисунка и живописи.
