--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,17 +40,18 @@
                         <h2 class="intro-text text-center">О студии</br></h2>
                         <hr>
                     </div></br><!-- #col-lg-12 --> 
-
-                    <p>Занятия проходят в небольших группах, что дает возможность каждому ученику заниматься по индивидуальной программе, составленной именно для него, исходя из его уровня и пожеланий, с тем, чтобы максимально развить творческие способности.</p>
-                    <p>У нас нет одной, усредненной программы для всех – ведь все мы разные, и пути развития у нас тоже различны.</p> 
-                    <p>Кто-то успешно идет по академической программе – шаг за шагом осваивая азы рисунка и живописи, постигая все хитрости светотени, формы, объема, перспективы на классических натюрмортах и гипсах, а кто-то от такого академизма «увядает», и тогда мы ищем индивидуальный путь  - то, что зацепит и вытащит на поверхность весь Ваш творческий потенциал.</p>
-                    <p>Я не раз наблюдала, как неожиданно, буквально за пару занятий расцветает, «взлетает» ученик, когда находит  свое – свою технику, свой формат.  Я считаю это очень важным и ценным, и к этому не обязательно иди долгой извилистой дорогой, а можно сразу взять в руки кисть, о которой мечтал с детства.</p>
-                    <p>Кто-то приходит и говорит: « я никогда в жизни не рисовал, но очень хочу писать маслом», и мы начинаем работать маслом, а кто-то приходит с давнишней мечтой об акварели, или пастели, и мы все это пробуем, буквально сразу на первом занятии. У всех свой путь к своим вершинам, ведь  творчество – это волшебный, непредсказуемый, но невероятно увлекательный процесс.</p>
-                    <p>Что является очень ценным и создает на занятиях ту неповторимую атмосферу погружения в искусство.</p>
-                    <p>Так же, исходя из моего опыта, я считаю очень важным и полезным то, что в группе одновременно занимаются  ученики разного уровня - те, кто пришел на первый урок, и те, кто занимается несколько лет, это взаимно развивает и обогащает учеников.  Это ценный опыт – видеть, как работают другие – ценный опыт Ведь порой нужно именно увидеть, пронаблюдать другую манеру, способ рисования, так же как очень полезно наблюдать как одну и ту же постановку рисуют и в цвете и в графике.</p>
-                    <p><span style="font-weight:bold">Как быть новичкам:</span></br>
-                    В студии есть все материалы, которые необходимы для занятий. На уроках вы осваиваете все художественные техники, а затем, постепенно, составляете свой собственный набор любимых материалов, который будет с Вами.</p></br>
-
+                    <div class="col-md-10">
+                        <p>Занятия проходят в небольших группах, что дает возможность каждому ученику заниматься по индивидуальной программе, составленной именно для него, исходя из его уровня и пожеланий, с тем, чтобы максимально развить творческие способности.</p>
+                        <p>У нас нет одной, усредненной программы для всех – ведь все мы разные, и пути развития у нас тоже различны.</p> 
+                        <p>Кто-то успешно идет по академической программе – шаг за шагом осваивая азы рисунка и живописи, постигая все хитрости светотени, формы, объема, перспективы на классических натюрмортах и гипсах, а кто-то от такого академизма «увядает», и тогда мы ищем индивидуальный путь  - то, что зацепит и вытащит на поверхность весь Ваш творческий потенциал.</p>
+                        <p>Я не раз наблюдала, как неожиданно, буквально за пару занятий расцветает, «взлетает» ученик, когда находит  свое – свою технику, свой формат.  Я считаю это очень важным и ценным, и к этому не обязательно иди долгой извилистой дорогой, а можно сразу взять в руки кисть, о которой мечтал с детства.</p>
+                        <p>Кто-то приходит и говорит: « я никогда в жизни не рисовал, но очень хочу писать маслом», и мы начинаем работать маслом, а кто-то приходит с давнишней мечтой об акварели, или пастели, и мы все это пробуем, буквально сразу на первом занятии. У всех свой путь к своим вершинам, ведь  творчество – это волшебный, непредсказуемый, но невероятно увлекательный процесс.</p>
+                        <p>Что является очень ценным и создает на занятиях ту неповторимую атмосферу погружения в искусство.</p>
+                        <p>Так же, исходя из моего опыта, я считаю очень важным и полезным то, что в группе одновременно занимаются  ученики разного уровня - те, кто пришел на первый урок, и те, кто занимается несколько лет, это взаимно развивает и обогащает учеников.  Это ценный опыт – видеть, как работают другие – ценный опыт Ведь порой нужно именно увидеть, пронаблюдать другую манеру, способ рисования, так же как очень полезно наблюдать как одну и ту же постановку рисуют и в цвете и в графике.</p>
+                        <h3>Как быть новичкам:</h3>
+                        <p>В студии есть все материалы, которые необходимы для занятий. На уроках вы осваиваете все художественные техники, а затем, постепенно, составляете свой собственный набор любимых материалов, который будет с Вами.</p></br>
+                    </div></br><!-- #col-md-8 --> 
+                    <div class="clear"></div>
                     <div class="col-lg-12">
                         <hr>
                         <h2 class="intro-text text-center">О преподавателе</br></h2>
