--- a/app/views/pages/lessons.html.erb
+++ b/app/views/pages/lessons.html.erb
@@ -7,17 +7,17 @@
                         <hr>
                 </div></br>
 
-		            <div class="col-lg-4 col-sm-6 text-center">
+		            <div class="col-lg-4 col-sm-6">
 		                <img class="img-circle img-responsive img-center pull-center" src="http://placehold.it/200x200" alt="">
 		                <h3>Живопись</h3>
 		                <p>В нашей студии мы пишем маслом и акварелью, акрилом и темперой, так же рисуем пастелью, которую все любят за цвет, но, тем не менее, этот материал относится к средствам графики. Ученики пробуют себя в цвете, осваивая все эти прекрасные материалы и техники.</p>
 		            </div>
-		            <div class="col-lg-4 col-sm-6 text-center">
+		            <div class="col-lg-4 col-sm-6">
 		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
 		                <h3>Рисунок</h3>
 		                <p>Натюрморты, гипсы, рисование с натуры – классический академический рисунок карандашом, где шаг за шагом изучаем основы рисования, форму, объем, правила перспективы – все для грамотного построение предметов в пространстве. Рисунок углем, сангиной, соусом – мы осваиваем эти графические техники, которые дают возможности быстрого, «живописного» рисования.</p>
 		            </div>
-		            <div class="col-lg-4 col-sm-6 text-center">
+		            <div class="col-lg-4 col-sm-6">
 		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
 		                <h3>Декор</h3>
 		                <p>А для тех, кто очень хочет творческого самовыражения, но пока не решается взять в руки кисть, есть прекрасная возможность для творчества – декупаж, витражная роспись, и множество других техник декоративно-прикладного искусства.</p>
@@ -28,9 +28,12 @@
                     <h2 class="intro-text text-center">Расписание занятий</br></h2>
                     <hr>
                 </div></br>
-                <p><span style="font-weight:bold">Четверг: 19.00 - 21.30</span></br>
-                   На первое занятие материалы приносить не нужно, в студии есть все необходимое для рисунка и живописи.
-                </p>
+                <h3>Четверг: 19.00 - 21.30</h3>
+                <div class="col-md-12">
+		                <p>
+		                   На первое занятие материалы приносить не нужно, в студии есть все необходимое для рисунка и живописи.
+		                </p>
+		            </div>    
 		            <div class="clearfix"></div>
 		      </div>
 		 
